--- a/404/css/style.css
+++ b/404/css/style.css
@@ -17,7 +17,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-image: url('../404/img/bg.jpg');
+  background-image: url('../../404/img/bg.jpg');
   background-size: cover;
 }
 
